--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   position: fixed;
   top: 0;
-  left: -350px; /* Start hidden off-screen */
+  left: -350px;
   width: 350px;
   max-width: calc(100vw - 38px);
   height: 100%;
@@ -14,11 +14,12 @@
   border-radius: 0 20px 20px 0;
 }
 
-@media only screen and (max-width: 500px) 
+@media only screen and (max-width: 350px) 
 {
   .sidebar 
   {
-    width: 400px;
+    width: 350px;
+    left: calc(-100vw + 36px);
   }
 }
 
@@ -146,7 +147,6 @@
 
 .ptp_box, .loop_box {
   max-height: 0;
-  /* overflow: hidden; */
   transition: max-height 1s ease, opacity 0.5s ease;
   opacity: 0;
 }
@@ -154,7 +154,7 @@
 .ptp_box.open {
   opacity: 1;
   height: 100vh;
-  max-height: calc(100vh - 283px); /* Adjust based on the content height */
+  max-height: calc(100vh - 283px);
 }
 
 .loop_box.open{
